# Ronin-v3.0

./: .env.example  .gitignore  Makefile  README.md  ROADMAP.md  docker-compose.yml  package.json
config/: claude_desktop_config.json  vscode_mcp_settings.json
deploy/: Dockerfile.prod  cloudbuild.yaml  deploy.sh
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: Ronin.jsx  main.jsx
scripts/: setup.sh
server/: Dockerfile  a2a_protocol.py  agent_cards.py  api.py  auth.py  backup.py  capability_matcher.py  cli.py  context_stream.py  event_queue.py  logging_config.py  model_router.py  notifications.py  pyproject.toml  requirements.txt  resilience.py  ronin_mcp_server.py  scheduler.py  token_optimizer.py  ttsi.py  vault.py
server/integrations/: slack_bot.py
server/tests/: test_a2a_protocol.py  test_agent_cards.py  test_api.py  test_auth.py  test_backup.py  test_cli.py  test_event_queue.py  test_notifications.py  test_resilience.py  test_router_ttsi.py  test_scheduler.py  test_server.py  test_slack.py  test_token_optimizer.py  test_vault.py  test_voice.py
server/watchers/: __init__.py  filesystem.py  system_monitor.py
